@@ -1,0 +1,20 @@
+/* Name of package */
+#define PACKAGE "roboptim-core-cfsqp-plugin"
+
+/* Define to the address where bug reports for this package should be sent. */
+#define PACKAGE_BUGREPORT "roboptim-user@lists.sourceforge.net"
+
+/* Define to the full name of this package. */
+#define PACKAGE_NAME "RobOptim core CFSQP plug-in"
+
+/* Define to the full name and version of this package. */
+#define PACKAGE_STRING "RobOptim core CFSQP plug-in 0.2"
+
+/* Define to the one symbol short name of this package. */
+#define PACKAGE_TARNAME "roboptim-core-cfsqp-plugin"
+
+/* Define to the version of this package. */
+#define PACKAGE_VERSION "0.2"
+
+/* Version number of package */
+#define VERSION "0.2"
