@@ -1,5 +1,13 @@
 2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add Visual Studio project and solution.
+	* msvc/roboptim-core-plugin-cfsqp/config.h: New.
+	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-cfsqp-plugin.sln: New.
+	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-plugin-cfsqp.vcproj: New.
+	* msvc/simple/simple.vcproj: New.
+
+2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Tag plug-in hooks functions as exportable for Windows compatbility.
 	* src/roboptim-core-cfsqp-plugin.cc: Here.
 
